nsutils/tests/base/errors/hostUnreach.trace
send 4 5 2 0 1
recv 2 5 0
send 22 5 1 0 3 15 105 110 118 97 108 105 100 46 105 110 118 97 108 105 100 4 87
recv 2 5 4
